[package]
name = "ron-uuid"
version = "0.3.1"
authors = [ "Marcus Brinkmann <marcus.brinkmann@ruhr-uni-bochum.de>", "Kai Michaelis <seu@p8n.io>" ]
description = "Replicated Object Notation UUIDs"
keywords = ["ron", "uuid"]
categories = ["parser-implementations"]
license = "LGPL-2.1-or-later OR MIT"
readme = "README.md"
repository = "https://github.com/flanfly/ron-uuid"
documentation = "https://docs.rs/ron-uuid/"

[dependencies]
quickcheck = "0.6"
chrono = "0.4"
